--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Renaissance -- Italy -- Milan'
 - !lcsh 'Nobility -- Italy -- Milan -- Biography'
 - !lcc 'DG'
+- GITenberg
 title: Beatrice d'Este, Duchess of Milan, 1475-1497
 url: http://www.gutenberg.org/ebooks/25622
